vlib/v/checker/tests/struct_required_field.out
vlib/v/checker/tests/struct_required_field.vv:12:6: error: field `Abc.f3` must be initialized
   10 |         f3: 789
   11 |     }
   12 |     _ = Abc{
      |         ~~~~
   13 |         f1: 123
   14 |         f2: 789
